# DeployUseTensorRT

./: .gitignore  CMakeLists.txt  README.md  gie_sample.sh
cmake/: DownloadGoogleTest.cmake  FindcuDNN.cmake
data/faster-rcnn/: download-fasterrcnn.sh
data/googlenet/: README.md
data/openpose/pose/body_25/: pose_iter_584000.caffemodel
data/sdk/align/: rel.prototxt
data/se-bn-inception/: deploy.prototxt
data/yolo/: README.md  yolo.prototxt
include/: BaseModel.h  CaffeModel.h  DataBlob.h  PluginManager.h  argsParser.h  basemodel.h  caffemodel.h  common.h  sampleConfig.h
include/common/: argsParser.h  buffers.h  common.h  logger.h  logging.h
include/extplugin/: interpPlugin.h  regPlugin.h
samples/: sampleGoogleNet.cpp
samples/FasterRCNN/: sampleFasterRCNN.cpp
samples/plugin/: fcPlugin.h  samplePlugin.cpp
samples/trtexec/: trtexec.cpp
src/: CaffeModel.cpp  DataBlob.cpp  caffemodel.cpp  logger.cpp  sampleGoogleNet.cpp
src/FasterRCNN/: README.md  sampleFasterRCNN.cpp
src/extplugin/: interpPlugin.cpp
src/plugin/: fcPlugin.h  fp16.h  samplePlugin.cpp
src/sampleFasterRCNN/: sampleFasterRCNN.cpp
src/tools/: trtexec.cpp
src/trtexec/: trtexec.cpp
test/: test_all.cpp  test_extplugin.cpp  test_init_caffemodel.cpp  test_sample.cpp
tools/: parse_layer.py  trtexec
